--- a/src/main/resources/templates/layout/publicTemplate.html
+++ b/src/main/resources/templates/layout/publicTemplate.html
@@ -1,63 +1,71 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
+
 <head>
-<meta charset="UTF-8" />
-<title th:text="${title}"></title>
-<link rel="stylesheet" type="text/css" media="all"
-	href="/css/bootstrap.min.css"
-	th:href="@{/assets/bootstrap/css/bootstrap.min.css}" />
-<link rel="stylesheet" type="text/css" media="all" href="/css/font-awesome.min.css"
-	th:href="@{/assets/font-awesome/css/font-awesome.min.css}" />
-<link rel="stylesheet" type="text/css" media="all" href="/css/summernote.min.css"
-	th:href="@{/assets/sumernote/summernote.css}" />
-<link rel="stylesheet" type="text/css" media="all" href="/css/main.css"
-	th:href="@{/css/main.css}" />	
-<script src="/js/jquery.min.js" th:src="@{/assets/jquery/js/jquery.min.js}"></script>
-<script src="/js/bootstrap.min.js" th:src="@{/assets/bootstrap/js/bootstrap.min.js}"></script>
-<script src="/js/summernote.min.js" th:src="@{/assets/sumernote/summernote.min.js}"></script>
+
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="description" content="Web Application that help us to organize information by topics"/>
+    <meta name="author" content="Diego Ventura"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>    
+
+	<title th:text="${title}"></title>
+	
+	<link th:href="@{/webjars/tether/1.3.3/dist/css/tether.min.css}" rel="stylesheet" type="text/css"/>
+	<link th:href="@{/webjars/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
+	<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}" rel="stylesheet" type="text/css"/>
+	<link th:href="@{/assets/sumernote/summernote.css}" rel="stylesheet" type="text/css"/>
+	<link th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
+	
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]><
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
-<body data-spy="scroll" data-target="#myScrollspy" data-offset="70">
+
+<body>
+
 	<!-- header -->
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container">
-			<a class="navbar-brand" href="/">Web Presentation</a>
-			<span th:unless="${topic} == null" th:text="${topic.title}"></span>			
-			<ul class="nav navbar-nav navbar-right">
-				<li sec:authorize="isAuthenticated()" class="dropdown"><a href="#" class="dropdown-toggle"
-					data-toggle="dropdown" role="button" aria-haspopup="true"
-					aria-expanded="false"><span sec:authentication="name"></span><span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="/bck/topics">Topics</a></li>
-						<li role="separator" class="divider"></li>
-						<li>
-				            <form th:action="@{/logout}" method="post">
-				            	<button type="submit" class="btn btn-default">Cerrar sesión</button>
-				        	</form>
-				        </li>
-					</ul></li>
-				<li sec:authorize="isAnonymous()">
-					<ul>
-						<form class="navbar-form navbar-left" role="login" th:action="@{/view/login}" method="post">
-						  <div class="form-group">
-						    <input type="text" class="form-control" name="username" placeholder="user"/>
-						  </div>
-						  <div class="form-group">
-						    <input type="password" class="form-control" name="password" placeholder="password"/>
-						  </div>  
-						  <button type="submit" class="btn btn-default">Iniciar sesión</button>
-						</form>
-					</ul>
-				</li>
-			</ul>
+
+	<nav class="navbar navbar-fixed-top navbar-light bg-faded">
+	
+		<a class="navbar-brand" href="/">Web Presentation</a>
+		<ul class="nav navbar-nav">
+		    <li th:unless="${topic} == null" class="nav-item active">
+				<a class="nav-link" href="#" th:text="${topic.title}"></a>
+			</li>
+		</ul>
+		
+		<div sec:authorize="isAuthenticated()" class="dropdown pull-right">
+			<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			  Menú usuario
+			</button>
+			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
+				<a class="dropdown-item" href="/bck/topics">Topicos</a>
+			  	<div class="dropdown-divider"></div>
+				<form th:action="@{/logout}" method="post">
+					<button class="dropdown-item" type="submit">Cerrar sesión</button>
+				</form>
+			</div>
 		</div>
-	</nav>
-	<!-- end header -->
+
+		<form sec:authorize="isAnonymous()" class="form-inline pull-xs-right" th:action="@{/view/login}" method="post">
+	    	<input class="form-control" type="text" name="username" placeholder="user"/>
+	    	<input class="form-control" type="password" name="password" placeholder="password"/>
+	    	<button class="btn btn-success-outline" type="submit">Iniciar sesion</button>
+	  	</form>
+	  		  	
+	</nav>	
+	
 	<div class="container">
 		<div class="row">
 			<div th:replace="(${body} == null) ? inicio : ${body}"></div>
 		</div>
 	</div>
+	
 	<!-- footer -->
 	<footer class="well well-sm">
 		<div class="container">
@@ -73,6 +81,14 @@
 			</div>
 		</div>
 	</footer>
-	<!-- end footer -->		
+	<!-- end footer -->
+	
+  	<script th:src="@{/webjars/jquery/2.2.4/jquery.min.js}"></script>
+	<script th:src="@{/webjars/tether/1.3.3/dist/js/tether.min.js}"></script>
+	<script th:src="@{/webjars/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js}"></script>
+	<!-- <script th:src="@{/webjars/angularjs/2.0.0-alpha.22/angular2.js}"></script>	-->
+	<script th:src="@{/assets/sumernote/summernote.min.js}"></script>
+	
 </body>
+
 </html>
