--- a/src/main/resources/templates/public/inicio.html
+++ b/src/main/resources/templates/public/inicio.html
@@ -1,11 +1,12 @@
-<div class="list-group">
+<div class="row">
 	<th:block th:each="topic : ${topics}">
-		<div class="panel panel-primary">
-			<a th:href="@{/view/topic/{id}/(id=${topic.id})}"
-				class="list-group-item">
-				<h4 class="list-group-item-heading" th:text="${topic.title}"></h4>
-			</a>
-			<p class="list-group-item-text" th:text="${topic.description}"></p>
+		<div class="col-md-3 portfolio-item">
+			<div class="card card-block">
+				<a th:href="@{/view/topic/{id}/(id=${topic.id})}">
+					<h4 class="card-title" th:text="${topic.title}"></h4>
+				</a>
+				<p class="card-text" th:text="${topic.description}"></p>
+			</div>
 		</div>
 	</th:block>
 </div>
